// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar componente correctamente con la imagen de producto 1 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente correctamente con la imagen personalizada 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://via.placeholder.com/150"
/>
`;
